Fixing a few issues on mobile

--- a/source/css/_layout.scss
+++ b/source/css/_layout.scss
@@ -14,6 +14,7 @@ body {
 // Can hold a hero picture for the sessions
 .l-container {
   min-height: 100%;
+  border-top: 1px solid transparent;
   @include background(url('/img/ui/texture.png'),
     linear-gradient(180deg, $base-texture-top-color, $base-texture-bottom-color),
     center no-repeat $base-texture-top-color scroll);
@@ -31,14 +32,16 @@ body {
 // that stretch to all the available space.
 .l-background-hero {
   position: fixed;
+  width: 100%;
   top: $header-height;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  z-index: $z-index-hero;
+  // height: 100% is better than bottom:0 on mobile. bottom:0 forces the mobile
+  // to recalculate when scrolling because the address bar can disappear, and
+  // this causes a lag in the display
+  height: 100%;
   background-position: top;
   background-repeat: no-repeat;
   background-size: cover;
-  z-index: $z-index-hero;
 }
 
 .l-content {
@@ -47,4 +50,3 @@ body {
   margin-top: $header-height;
   padding: .5rem 1rem 3rem 1rem;
 }
-
